[tool.poetry]
name = "LocalSDWebgui"
version = "0.1.0"
description = ""
authors = ["Mohan Zhang"]
readme = "README.md"
# packages = [{include = "coil"}]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "*"
blendmodes = "^2022"
accelerate = "^0.17.1"
basicsr = "^1.4.2"
fonts = "^0.0.3"
font-roboto = "^0.0.1"
gfpgan = "^1.3.8"
gradio = "3.16.2"
invisible-watermark = "^0.1.5"
numpy = "^1.24.2"
omegaconf = "^2.3.0"
opencv-contrib-python = "^4.7.0"
requests = "^2.28.2"
piexif = "^1.1.3"
Pillow = "^9.4.0"
realesrgan = "^0.3.0"
scikit-image = ">=0.19"
timm = "0.4.12"
einops = "^0.6.0"
jsonmerge = "^1.9.0"
clean-fid = "^0.1.35"
resize-right = "^0.0.2"
kornia = "^0.6.10"
lark = "^1.1.5"
inflection = "^0.5.1"
GitPython = "^3.1.31"
psutil = "^5.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"